Altered database conf(must be reworked), created table, repository, test domain, connected with databse, fixed jvm 9 dependency error and created twitterFuture util